parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    ASYNC
    AWAIT
    BREAK
    CONST
    CONTINUE
    CRATE
    DOUBLEQUOTE
    DYN
    ELSE
    ENUM
    EXTERN
    IF
    IMPL
    LOOP
    MATCH
    MODULE
    MOVE
    PUB
    RETURN
    SINGLEQUOTE
    STATIC
    STRUCT
    SUPER
    Self
    TRAIT
    TYPE
    UNSAFE
    USE
    WHERE
    self

Grammar

Rule 0     S' -> funcion
Rule 1     funcion -> FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET
Rule 2     codigo -> expresionAritmetica masCodigo
Rule 3     codigo -> impresion masCodigo
Rule 4     codigo -> condiciones masCodigo
Rule 5     codigo -> asignacion masCodigo
Rule 6     codigo -> estrFor
Rule 7     codigo -> estrWhile
Rule 8     codigo -> input masCodigo
Rule 9     codigo -> funciones
Rule 10    funciones -> funcion
Rule 11    funciones -> funcion funciones
Rule 12    masCodigo -> SEMICOLON
Rule 13    masCodigo -> SEMICOLON codigo
Rule 14    expresionAritmetica -> valor operador valor
Rule 15    expresionAritmetica -> valor operador expresionAritmetica
Rule 16    operador -> PLUS
Rule 17    operador -> MINUS
Rule 18    operador -> MULT
Rule 19    operador -> DIVIDE
Rule 20    operador -> MOD
Rule 21    valor -> INTEGER
Rule 22    valor -> FLOAT
Rule 23    valor -> ID
Rule 24    valores -> valor
Rule 25    valores -> valor COMMA valores
Rule 26    impresion -> PRINTLN NOT LPAREN valores RPAREN
Rule 27    input -> STD COLON COLON IO COLON COLON STDIN LPAREN RPAREN DOT READLINE LPAREN REF MUT ID RPAREN
Rule 28    condicion -> valor operComp valor
Rule 29    operComp -> GREATERTHAN
Rule 30    operComp -> LESSTHAN
Rule 31    operComp -> EQUALITY
Rule 32    operComp -> DIFFERENTFROM
Rule 33    operComp -> GREATEREQUALSTHAN
Rule 34    operComp -> LESSEQUALSTHAN
Rule 35    condiciones -> condicion
Rule 36    condiciones -> condicion conector condiciones
Rule 37    condicion -> TRUE
Rule 38    condicion -> FALSE
Rule 39    conector -> AND
Rule 40    conector -> OR
Rule 41    asignacion -> LET ID ASSIGN valor
Rule 42    asignacion -> LET ID ASSIGN condiciones
Rule 43    asignacion -> LET ID ASSIGN expresionAritmetica
Rule 44    asignacion -> LET ID ASSIGN estructuras
Rule 45    estructuras -> tupla
Rule 46    estructuras -> array
Rule 47    tupla -> LPAREN valores RPAREN
Rule 48    tupla -> LPAREN RPAREN
Rule 49    array -> LBRACKET valores RBRACKET
Rule 50    array -> LBRACKET RBRACKET
Rule 51    estrWhile -> WHILE condiciones LCURLYBRACKET codigo RCURLYBRACKET
Rule 52    estrWhile -> WHILE condiciones LCURLYBRACKET codigo RCURLYBRACKET codigo
Rule 53    estrFor -> FOR ID IN ID LCURLYBRACKET codigo RCURLYBRACKET
Rule 54    estrFor -> FOR ID IN ID LCURLYBRACKET codigo RCURLYBRACKET codigo
Rule 55    impresion -> PRINT error
Rule 56    funcion -> FN error
Rule 57    expresionAritmetica -> valor error
Rule 58    input -> STD error
Rule 59    asignacion -> LET error

Terminals, with rules where they appear

AND                  : 39
AS                   : 
ASSIGN               : 41 42 43 44
ASYNC                : 
AWAIT                : 
BREAK                : 
COLON                : 27 27 27 27
COMMA                : 25
CONST                : 
CONTINUE             : 
CRATE                : 
DIFFERENTFROM        : 32
DIVIDE               : 19
DOT                  : 27
DOUBLEQUOTE          : 
DYN                  : 
ELSE                 : 
ENUM                 : 
EQUALITY             : 31
EXTERN               : 
FALSE                : 38
FLOAT                : 22
FN                   : 1 56
FOR                  : 53 54
GREATEREQUALSTHAN    : 33
GREATERTHAN          : 29
ID                   : 1 23 27 41 42 43 44 53 53 54 54
IF                   : 
IMPL                 : 
IN                   : 53 54
INTEGER              : 21
IO                   : 27
LBRACKET             : 49 50
LCURLYBRACKET        : 1 51 52 53 54
LESSEQUALSTHAN       : 34
LESSTHAN             : 30
LET                  : 41 42 43 44 59
LOOP                 : 
LPAREN               : 1 26 27 27 47 48
MATCH                : 
MINUS                : 17
MOD                  : 20
MODULE               : 
MOVE                 : 
MULT                 : 18
MUT                  : 27
NOT                  : 26
OR                   : 40
PLUS                 : 16
PRINT                : 55
PRINTLN              : 26
PUB                  : 
RBRACKET             : 49 50
RCURLYBRACKET        : 1 51 52 53 54
READLINE             : 27
REF                  : 27
RETURN               : 
RPAREN               : 1 26 27 27 47 48
SEMICOLON            : 12 13
SINGLEQUOTE          : 
STATIC               : 
STD                  : 27 58
STDIN                : 27
STRUCT               : 
SUPER                : 
Self                 : 
TRAIT                : 
TRUE                 : 37
TYPE                 : 
UNSAFE               : 
USE                  : 
WHERE                : 
WHILE                : 51 52
error                : 55 56 57 58 59
self                 : 

Nonterminals, with rules where they appear

array                : 46
asignacion           : 5
codigo               : 1 13 51 52 52 53 54 54
condicion            : 35 36
condiciones          : 4 36 42 51 52
conector             : 36
estrFor              : 6
estrWhile            : 7
estructuras          : 44
expresionAritmetica  : 2 15 43
funcion              : 10 11 0
funciones            : 9 11
impresion            : 3
input                : 8
masCodigo            : 2 3 4 5 8
operComp             : 28
operador             : 14 15
tupla                : 45
valor                : 14 14 15 24 25 28 28 41 57
valores              : 25 26 47 49

Parsing method: LALR

state 0

    (0) S' -> . funcion
    (1) funcion -> . FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET
    (56) funcion -> . FN error

    FN              shift and go to state 2

    funcion                        shift and go to state 1

state 1

    (0) S' -> funcion .



state 2

    (1) funcion -> FN . ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET
    (56) funcion -> FN . error

    ID              shift and go to state 3
    error           shift and go to state 4


state 3

    (1) funcion -> FN ID . LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET

    LPAREN          shift and go to state 5


state 4

    (56) funcion -> FN error .

    $end            reduce using rule 56 (funcion -> FN error .)
    FN              reduce using rule 56 (funcion -> FN error .)
    RCURLYBRACKET   reduce using rule 56 (funcion -> FN error .)


state 5

    (1) funcion -> FN ID LPAREN . RPAREN LCURLYBRACKET codigo RCURLYBRACKET

    RPAREN          shift and go to state 6


state 6

    (1) funcion -> FN ID LPAREN RPAREN . LCURLYBRACKET codigo RCURLYBRACKET

    LCURLYBRACKET   shift and go to state 7


state 7

    (1) funcion -> FN ID LPAREN RPAREN LCURLYBRACKET . codigo RCURLYBRACKET
    (2) codigo -> . expresionAritmetica masCodigo
    (3) codigo -> . impresion masCodigo
    (4) codigo -> . condiciones masCodigo
    (5) codigo -> . asignacion masCodigo
    (6) codigo -> . estrFor
    (7) codigo -> . estrWhile
    (8) codigo -> . input masCodigo
    (9) codigo -> . funciones
    (14) expresionAritmetica -> . valor operador valor
    (15) expresionAritmetica -> . valor operador expresionAritmetica
    (57) expresionAritmetica -> . valor error
    (26) impresion -> . PRINTLN NOT LPAREN valores RPAREN
    (55) impresion -> . PRINT error
    (35) condiciones -> . condicion
    (36) condiciones -> . condicion conector condiciones
    (41) asignacion -> . LET ID ASSIGN valor
    (42) asignacion -> . LET ID ASSIGN condiciones
    (43) asignacion -> . LET ID ASSIGN expresionAritmetica
    (44) asignacion -> . LET ID ASSIGN estructuras
    (59) asignacion -> . LET error
    (53) estrFor -> . FOR ID IN ID LCURLYBRACKET codigo RCURLYBRACKET
    (54) estrFor -> . FOR ID IN ID LCURLYBRACKET codigo RCURLYBRACKET codigo
    (51) estrWhile -> . WHILE condiciones LCURLYBRACKET codigo RCURLYBRACKET
    (52) estrWhile -> . WHILE condiciones LCURLYBRACKET codigo RCURLYBRACKET codigo
    (27) input -> . STD COLON COLON IO COLON COLON STDIN LPAREN RPAREN DOT READLINE LPAREN REF MUT ID RPAREN
    (58) input -> . STD error
    (10) funciones -> . funcion
    (11) funciones -> . funcion funciones
    (21) valor -> . INTEGER
    (22) valor -> . FLOAT
    (23) valor -> . ID
    (28) condicion -> . valor operComp valor
    (37) condicion -> . TRUE
    (38) condicion -> . FALSE
    (1) funcion -> . FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET
    (56) funcion -> . FN error

    PRINTLN         shift and go to state 19
    PRINT           shift and go to state 20
    LET             shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 24
    STD             shift and go to state 25
    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 28
    ID              shift and go to state 8
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    FN              shift and go to state 2

    codigo                         shift and go to state 9
    expresionAritmetica            shift and go to state 10
    impresion                      shift and go to state 11
    condiciones                    shift and go to state 12
    asignacion                     shift and go to state 13
    estrFor                        shift and go to state 14
    estrWhile                      shift and go to state 15
    input                          shift and go to state 16
    funciones                      shift and go to state 17
    valor                          shift and go to state 18
    condicion                      shift and go to state 21
    funcion                        shift and go to state 26

state 8

    (23) valor -> ID .

    error           reduce using rule 23 (valor -> ID .)
    PLUS            reduce using rule 23 (valor -> ID .)
    MINUS           reduce using rule 23 (valor -> ID .)
    MULT            reduce using rule 23 (valor -> ID .)
    DIVIDE          reduce using rule 23 (valor -> ID .)
    MOD             reduce using rule 23 (valor -> ID .)
    GREATERTHAN     reduce using rule 23 (valor -> ID .)
    LESSTHAN        reduce using rule 23 (valor -> ID .)
    EQUALITY        reduce using rule 23 (valor -> ID .)
    DIFFERENTFROM   reduce using rule 23 (valor -> ID .)
    GREATEREQUALSTHAN reduce using rule 23 (valor -> ID .)
    LESSEQUALSTHAN  reduce using rule 23 (valor -> ID .)
    SEMICOLON       reduce using rule 23 (valor -> ID .)
    AND             reduce using rule 23 (valor -> ID .)
    OR              reduce using rule 23 (valor -> ID .)
    LCURLYBRACKET   reduce using rule 23 (valor -> ID .)
    COMMA           reduce using rule 23 (valor -> ID .)
    RPAREN          reduce using rule 23 (valor -> ID .)
    RBRACKET        reduce using rule 23 (valor -> ID .)


state 9

    (1) funcion -> FN ID LPAREN RPAREN LCURLYBRACKET codigo . RCURLYBRACKET

    RCURLYBRACKET   shift and go to state 31


state 10

    (2) codigo -> expresionAritmetica . masCodigo
    (12) masCodigo -> . SEMICOLON
    (13) masCodigo -> . SEMICOLON codigo

    SEMICOLON       shift and go to state 33

    masCodigo                      shift and go to state 32

state 11

    (3) codigo -> impresion . masCodigo
    (12) masCodigo -> . SEMICOLON
    (13) masCodigo -> . SEMICOLON codigo

    SEMICOLON       shift and go to state 33

    masCodigo                      shift and go to state 34

state 12

    (4) codigo -> condiciones . masCodigo
    (12) masCodigo -> . SEMICOLON
    (13) masCodigo -> . SEMICOLON codigo

    SEMICOLON       shift and go to state 33

    masCodigo                      shift and go to state 35

state 13

    (5) codigo -> asignacion . masCodigo
    (12) masCodigo -> . SEMICOLON
    (13) masCodigo -> . SEMICOLON codigo

    SEMICOLON       shift and go to state 33

    masCodigo                      shift and go to state 36

state 14

    (6) codigo -> estrFor .

    RCURLYBRACKET   reduce using rule 6 (codigo -> estrFor .)


state 15

    (7) codigo -> estrWhile .

    RCURLYBRACKET   reduce using rule 7 (codigo -> estrWhile .)


state 16

    (8) codigo -> input . masCodigo
    (12) masCodigo -> . SEMICOLON
    (13) masCodigo -> . SEMICOLON codigo

    SEMICOLON       shift and go to state 33

    masCodigo                      shift and go to state 37

state 17

    (9) codigo -> funciones .

    RCURLYBRACKET   reduce using rule 9 (codigo -> funciones .)


state 18

    (14) expresionAritmetica -> valor . operador valor
    (15) expresionAritmetica -> valor . operador expresionAritmetica
    (57) expresionAritmetica -> valor . error
    (28) condicion -> valor . operComp valor
    (16) operador -> . PLUS
    (17) operador -> . MINUS
    (18) operador -> . MULT
    (19) operador -> . DIVIDE
    (20) operador -> . MOD
    (29) operComp -> . GREATERTHAN
    (30) operComp -> . LESSTHAN
    (31) operComp -> . EQUALITY
    (32) operComp -> . DIFFERENTFROM
    (33) operComp -> . GREATEREQUALSTHAN
    (34) operComp -> . LESSEQUALSTHAN

    error           shift and go to state 39
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    MULT            shift and go to state 43
    DIVIDE          shift and go to state 44
    MOD             shift and go to state 45
    GREATERTHAN     shift and go to state 46
    LESSTHAN        shift and go to state 47
    EQUALITY        shift and go to state 48
    DIFFERENTFROM   shift and go to state 49
    GREATEREQUALSTHAN shift and go to state 50
    LESSEQUALSTHAN  shift and go to state 51

    operador                       shift and go to state 38
    operComp                       shift and go to state 40

state 19

    (26) impresion -> PRINTLN . NOT LPAREN valores RPAREN

    NOT             shift and go to state 52


state 20

    (55) impresion -> PRINT . error

    error           shift and go to state 53


state 21

    (35) condiciones -> condicion .
    (36) condiciones -> condicion . conector condiciones
    (39) conector -> . AND
    (40) conector -> . OR

    SEMICOLON       reduce using rule 35 (condiciones -> condicion .)
    LCURLYBRACKET   reduce using rule 35 (condiciones -> condicion .)
    AND             shift and go to state 55
    OR              shift and go to state 56

    conector                       shift and go to state 54

state 22

    (41) asignacion -> LET . ID ASSIGN valor
    (42) asignacion -> LET . ID ASSIGN condiciones
    (43) asignacion -> LET . ID ASSIGN expresionAritmetica
    (44) asignacion -> LET . ID ASSIGN estructuras
    (59) asignacion -> LET . error

    ID              shift and go to state 57
    error           shift and go to state 58


state 23

    (53) estrFor -> FOR . ID IN ID LCURLYBRACKET codigo RCURLYBRACKET
    (54) estrFor -> FOR . ID IN ID LCURLYBRACKET codigo RCURLYBRACKET codigo

    ID              shift and go to state 59


state 24

    (51) estrWhile -> WHILE . condiciones LCURLYBRACKET codigo RCURLYBRACKET
    (52) estrWhile -> WHILE . condiciones LCURLYBRACKET codigo RCURLYBRACKET codigo
    (35) condiciones -> . condicion
    (36) condiciones -> . condicion conector condiciones
    (28) condicion -> . valor operComp valor
    (37) condicion -> . TRUE
    (38) condicion -> . FALSE
    (21) valor -> . INTEGER
    (22) valor -> . FLOAT
    (23) valor -> . ID

    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 28
    ID              shift and go to state 8

    condiciones                    shift and go to state 60
    condicion                      shift and go to state 21
    valor                          shift and go to state 61

state 25

    (27) input -> STD . COLON COLON IO COLON COLON STDIN LPAREN RPAREN DOT READLINE LPAREN REF MUT ID RPAREN
    (58) input -> STD . error

    COLON           shift and go to state 62
    error           shift and go to state 63


state 26

    (10) funciones -> funcion .
    (11) funciones -> funcion . funciones
    (10) funciones -> . funcion
    (11) funciones -> . funcion funciones
    (1) funcion -> . FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET
    (56) funcion -> . FN error

    RCURLYBRACKET   reduce using rule 10 (funciones -> funcion .)
    FN              shift and go to state 2

    funcion                        shift and go to state 26
    funciones                      shift and go to state 64

state 27

    (21) valor -> INTEGER .

    error           reduce using rule 21 (valor -> INTEGER .)
    PLUS            reduce using rule 21 (valor -> INTEGER .)
    MINUS           reduce using rule 21 (valor -> INTEGER .)
    MULT            reduce using rule 21 (valor -> INTEGER .)
    DIVIDE          reduce using rule 21 (valor -> INTEGER .)
    MOD             reduce using rule 21 (valor -> INTEGER .)
    GREATERTHAN     reduce using rule 21 (valor -> INTEGER .)
    LESSTHAN        reduce using rule 21 (valor -> INTEGER .)
    EQUALITY        reduce using rule 21 (valor -> INTEGER .)
    DIFFERENTFROM   reduce using rule 21 (valor -> INTEGER .)
    GREATEREQUALSTHAN reduce using rule 21 (valor -> INTEGER .)
    LESSEQUALSTHAN  reduce using rule 21 (valor -> INTEGER .)
    SEMICOLON       reduce using rule 21 (valor -> INTEGER .)
    AND             reduce using rule 21 (valor -> INTEGER .)
    OR              reduce using rule 21 (valor -> INTEGER .)
    LCURLYBRACKET   reduce using rule 21 (valor -> INTEGER .)
    COMMA           reduce using rule 21 (valor -> INTEGER .)
    RPAREN          reduce using rule 21 (valor -> INTEGER .)
    RBRACKET        reduce using rule 21 (valor -> INTEGER .)


state 28

    (22) valor -> FLOAT .

    error           reduce using rule 22 (valor -> FLOAT .)
    PLUS            reduce using rule 22 (valor -> FLOAT .)
    MINUS           reduce using rule 22 (valor -> FLOAT .)
    MULT            reduce using rule 22 (valor -> FLOAT .)
    DIVIDE          reduce using rule 22 (valor -> FLOAT .)
    MOD             reduce using rule 22 (valor -> FLOAT .)
    GREATERTHAN     reduce using rule 22 (valor -> FLOAT .)
    LESSTHAN        reduce using rule 22 (valor -> FLOAT .)
    EQUALITY        reduce using rule 22 (valor -> FLOAT .)
    DIFFERENTFROM   reduce using rule 22 (valor -> FLOAT .)
    GREATEREQUALSTHAN reduce using rule 22 (valor -> FLOAT .)
    LESSEQUALSTHAN  reduce using rule 22 (valor -> FLOAT .)
    SEMICOLON       reduce using rule 22 (valor -> FLOAT .)
    AND             reduce using rule 22 (valor -> FLOAT .)
    OR              reduce using rule 22 (valor -> FLOAT .)
    LCURLYBRACKET   reduce using rule 22 (valor -> FLOAT .)
    COMMA           reduce using rule 22 (valor -> FLOAT .)
    RPAREN          reduce using rule 22 (valor -> FLOAT .)
    RBRACKET        reduce using rule 22 (valor -> FLOAT .)


state 29

    (37) condicion -> TRUE .

    AND             reduce using rule 37 (condicion -> TRUE .)
    OR              reduce using rule 37 (condicion -> TRUE .)
    SEMICOLON       reduce using rule 37 (condicion -> TRUE .)
    LCURLYBRACKET   reduce using rule 37 (condicion -> TRUE .)


state 30

    (38) condicion -> FALSE .

    AND             reduce using rule 38 (condicion -> FALSE .)
    OR              reduce using rule 38 (condicion -> FALSE .)
    SEMICOLON       reduce using rule 38 (condicion -> FALSE .)
    LCURLYBRACKET   reduce using rule 38 (condicion -> FALSE .)


state 31

    (1) funcion -> FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET .

    $end            reduce using rule 1 (funcion -> FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET .)
    FN              reduce using rule 1 (funcion -> FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET .)
    RCURLYBRACKET   reduce using rule 1 (funcion -> FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET .)


state 32

    (2) codigo -> expresionAritmetica masCodigo .

    RCURLYBRACKET   reduce using rule 2 (codigo -> expresionAritmetica masCodigo .)


state 33

    (12) masCodigo -> SEMICOLON .
    (13) masCodigo -> SEMICOLON . codigo
    (2) codigo -> . expresionAritmetica masCodigo
    (3) codigo -> . impresion masCodigo
    (4) codigo -> . condiciones masCodigo
    (5) codigo -> . asignacion masCodigo
    (6) codigo -> . estrFor
    (7) codigo -> . estrWhile
    (8) codigo -> . input masCodigo
    (9) codigo -> . funciones
    (14) expresionAritmetica -> . valor operador valor
    (15) expresionAritmetica -> . valor operador expresionAritmetica
    (57) expresionAritmetica -> . valor error
    (26) impresion -> . PRINTLN NOT LPAREN valores RPAREN
    (55) impresion -> . PRINT error
    (35) condiciones -> . condicion
    (36) condiciones -> . condicion conector condiciones
    (41) asignacion -> . LET ID ASSIGN valor
    (42) asignacion -> . LET ID ASSIGN condiciones
    (43) asignacion -> . LET ID ASSIGN expresionAritmetica
    (44) asignacion -> . LET ID ASSIGN estructuras
    (59) asignacion -> . LET error
    (53) estrFor -> . FOR ID IN ID LCURLYBRACKET codigo RCURLYBRACKET
    (54) estrFor -> . FOR ID IN ID LCURLYBRACKET codigo RCURLYBRACKET codigo
    (51) estrWhile -> . WHILE condiciones LCURLYBRACKET codigo RCURLYBRACKET
    (52) estrWhile -> . WHILE condiciones LCURLYBRACKET codigo RCURLYBRACKET codigo
    (27) input -> . STD COLON COLON IO COLON COLON STDIN LPAREN RPAREN DOT READLINE LPAREN REF MUT ID RPAREN
    (58) input -> . STD error
    (10) funciones -> . funcion
    (11) funciones -> . funcion funciones
    (21) valor -> . INTEGER
    (22) valor -> . FLOAT
    (23) valor -> . ID
    (28) condicion -> . valor operComp valor
    (37) condicion -> . TRUE
    (38) condicion -> . FALSE
    (1) funcion -> . FN ID LPAREN RPAREN LCURLYBRACKET codigo RCURLYBRACKET
    (56) funcion -> . FN error

    RCURLYBRACKET   reduce using rule 12 (masCodigo -> SEMICOLON .)
    PRINTLN         shift and go to state 19
    PRINT           shift and go to state 20
    LET             shift and go to state 22
    FOR             shift and go to state 23
    WHILE           shift and go to state 24
    STD             shift and go to state 25
    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 28
    ID              shift and go to state 8
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    FN              shift and go to state 2

    codigo                         shift and go to state 65
    expresionAritmetica            shift and go to state 10
    impresion                      shift and go to state 11
    condiciones                    shift and go to state 12
    asignacion                     shift and go to state 13
    estrFor                        shift and go to state 14
    estrWhile                      shift and go to state 15
    input                          shift and go to state 16
    funciones                      shift and go to state 17
    valor                          shift and go to state 18
    condicion                      shift and go to state 21
    funcion                        shift and go to state 26

state 34

    (3) codigo -> impresion masCodigo .

    RCURLYBRACKET   reduce using rule 3 (codigo -> impresion masCodigo .)


state 35

    (4) codigo -> condiciones masCodigo .

    RCURLYBRACKET   reduce using rule 4 (codigo -> condiciones masCodigo .)


state 36

    (5) codigo -> asignacion masCodigo .

    RCURLYBRACKET   reduce using rule 5 (codigo -> asignacion masCodigo .)


state 37

    (8) codigo -> input masCodigo .

    RCURLYBRACKET   reduce using rule 8 (codigo -> input masCodigo .)


state 38

    (14) expresionAritmetica -> valor operador . valor
    (15) expresionAritmetica -> valor operador . expresionAritmetica
    (21) valor -> . INTEGER
    (22) valor -> . FLOAT
    (23) valor -> . ID
    (14) expresionAritmetica -> . valor operador valor
    (15) expresionAritmetica -> . valor operador expresionAritmetica
    (57) expresionAritmetica -> . valor error

    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 28
    ID              shift and go to state 8

    valor                          shift and go to state 66
    expresionAritmetica            shift and go to state 67

state 39

    (57) expresionAritmetica -> valor error .

    SEMICOLON       reduce using rule 57 (expresionAritmetica -> valor error .)


state 40

    (28) condicion -> valor operComp . valor
    (21) valor -> . INTEGER
    (22) valor -> . FLOAT
    (23) valor -> . ID

    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 28
    ID              shift and go to state 8

    valor                          shift and go to state 68

state 41

    (16) operador -> PLUS .

    INTEGER         reduce using rule 16 (operador -> PLUS .)
    FLOAT           reduce using rule 16 (operador -> PLUS .)
    ID              reduce using rule 16 (operador -> PLUS .)


state 42

    (17) operador -> MINUS .

    INTEGER         reduce using rule 17 (operador -> MINUS .)
    FLOAT           reduce using rule 17 (operador -> MINUS .)
    ID              reduce using rule 17 (operador -> MINUS .)


state 43

    (18) operador -> MULT .
